src/snapshots/interpreter__parser__tests__simple_test@inline.snap
---
source: src/parser.rs
expression: ast
info: "input = `$ as $ \\( as2 \\) \\( as3 $`"
---
stmts:
  - Env:
      name: unnamed
      children:
        - Token: Space
        - Text: as
        - Token: Space
      is_alt: false
      kind: InlineMath
      start_end:
        - Token: InlineMathLimiter
        - Token: InlineMathLimiter
  - Token: Space
  - Env:
      name: unnamed
      children:
        - Token: Space
        - Text: as2
        - Token: Space
      is_alt: false
      kind: InlineMath
      start_end:
        - Token: InlineMathStartAlt
        - Token: InlineMathEndAlt
  - Token: Space
  - Env:
      name: unnamed
      children:
        - Token: Space
        - Text: as3
        - Token: Space
      is_alt: false
      kind: InlineMath
      start_end:
        - Token: InlineMathStartAlt
        - Token: InlineMathLimiter

