src/snapshots/interpreter__parser__tests__superscript@macro.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `$ \\lambda^\\mu $ `"
---
stmts:
  - Env:
      name: unnamed
      children:
        - Token: Space
        - KnownMacro:
            name: lambda
            args: []
            is_alt: false
        - SuperScript:
            KnownMacro:
              name: mu
              args: []
              is_alt: false
        - Token: Space
      is_alt: false
      kind: InlineMath
      start_end:
        - Token: InlineMathLimiter
        - Token: InlineMathLimiter
  - Token: Space
errors: []

